# banking-llm

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  langgraph.json  pyproject.toml  readme.md
docs/adr/: 01-langchain-pix-environment_macro.md
docs/project/: 20250517-langchain-pix-environment_macro.md
scripts/: setup.sh  start.sh
src/: main.py
src/chat/: router.py
src/core/: __init__.py  cache.py  config.py  health_check.py  logger.py  middleware.py
src/graph/: factory.py  graph.py  state.py
src/graph/nodes/: brcode_preview_node.py  chat_response_node.py  fallback_node.py  guardrail_node.py  identify_intent.py  list_keys_node.py  pix_payment_node.py  pix_withdraw_node.py  read_key_node.py
src/graph/prompts/: chat_response.py  guardrail.py  identify_intent.py
src/infrastructure/: banking_auth.py  banking_client.py  llm_service.py
src/infrastructure/banking/: banking_auth.py  banking_client.py
src/infrastructure/cache/: cache_service.py
src/infrastructure/dto/: __init__.py  brcode_preview_dto.py  list_keys_dto.py  pix_withdraw_dto.py  read_keys_dto.py
src/services/: brcode_preview_service.py  guardrail_service.py  intent_service.py  pix_key_service.py  pix_payment_service.py  pix_withdraw_service.py  response_service.py
tasks/plans/: 20250521-account-env-fallback_plan.md  20250522-prompt-injection-guard_plan.md  20260521-brcode-preview_plan.md  20260521-pix-payment_plan.md  20260521-pix-withdraw_plan.md
tasks/specs/: 20250521-account-env-fallback_spec.md  20250521-prompt-injection-guard_spec.md  20260521-brcode-preview_spec.md  20260521-pix-payment_spec.md  20260521-pix-withdraw_spec.md
tests/: __init__.py  conftest.py  test_banking_auth.py  test_brcode_preview_service.py  test_cache.py  test_chat_memory.py  test_guardrail_node.py  test_guardrail_service.py  test_health_check.py  test_intent_service.py  test_pix_key_service.py  test_pix_payment_service.py  test_pix_withdraw_service.py  test_response_service.py
