[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-pix-environment"
version = "0.1.0"
description = "A minimal LangChain LCEL chain exposed through FastAPI, using OpenRouter as the LLM provider."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Marcel Bittar", email = "marcel.bittar@gmail.com"}
]
keywords = [
    "software engineering",
    "api application",
    "langchain application",
]

dependencies = [
    "cryptography>=46.0.4",
    "langchain>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.1.1",
    "langgraph-cli[inmem]>=0.0.20",
    "PyJWT>=2.12.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "redis[hiredis]>=5.0.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg[binary,pool]>=3.3.4",
    "pytz>=2026.2",
    "structlog>=25.5.0",
]


[dependency-groups]
dev = [
    "black>=26.3.1",
    "colorama>=0.4.6",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.11.0",
]


[tool.ruff]
# Target your specific Python version
target-version = "py312"
line-length = 120

[tool.ruff.lint]
# Select specific rule sets
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "FAST", # FastAPI-specific rules (Crucial)
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.flake8-type-checking]
# FastAPI uses type annotations at runtime for DI and validation.
# These settings prevent Ruff from moving them into TYPE_CHECKING blocks.
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
runtime-evaluated-decorators = ["fastapi.Depends"]



[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test", "Acceptance"]
python_functions = ["test_*"]
testpaths = ["tests"]
filterwarnings = "error"
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = '''
    --verbose
    -p no:warnings
    --cov=src
    --cov=tests
    --cov-branch
    --cov-report=term-missing
    --cov-report=html:coverage/cov_html
    --cov-report=xml:coverage/cov.xml
    --no-cov-on-fail
'''
plugins = [
    "anyio",
    "cov",
]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "def __repr__",
    "    ...",
]
skip_empty = true
sort = "-Cover"